--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@subsquid/archive-registry": "^2.1.9",
     "@subsquid/evm-processor": "^0.4.0",
     "@subsquid/graphql-server": "3.3.2",
+    "@subsquid/logger": "^0.3.1",
     "@subsquid/typeorm-migration": "0.1.6",
     "@subsquid/typeorm-store": "0.2.2",
     "dotenv": "^16.0.3",
     "ethers": "^6.2.0",
+    "lru-cache": "^8.0.4",
     "web3": "^1.9.0"
   },
   "devDependencies": {
